# vtexads-opportunity-analyzer

./: .env.example  .gitignore  pyproject.toml  vercel.json
analyzer/: __main__.py  cli.py  config.py  formatter.py  models.py
analyzer/clients/: ads_perf.py  metabase.py
analyzer/reports/: opportunity_sizing.py  placement_gap.py  publisher_gap.py
api/: campaign_detail.py  campaigns.py  coverage.py  index.py  opportunities.py  placements.py  placements_page.py  publisher_detail.py  publishers.py
